Bug 277769 - 'Akonadi' asks permission to access my wallet
Summary: 'Akonadi' asks permission to access my wallet
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 4.6
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-14 16:43 UTC by Michał
Modified: 2011-09-24 07:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michał 2011-07-14 16:43:28 UTC
Version:           2.1.1 (using Devel) 
OS:                Linux

I don't know what's Akonadi and why should I permit it to access my wallet.
There's no information that Akonadi is somehow connected to KMail.

Reproducible: Didn't try

Steps to Reproduce:
Run KMail2 for the first time and do a migration.

Actual Results:  
'Akonadi' wants to access my wallet.

Expected Results:  
'KMail' wants to access my wallet.
Comment 1 András Manţia 2011-09-21 20:06:40 UTC
Git commit 3d91e285f6d876fc4515f256a0ba06d41f92fad5 by Andras Mantia.
Committed on 21/09/2011 at 22:04.
Pushed by amantia into branch 'master'.

Set a program name to show a nicer name in the kwallet dialog, not just "Akonadi Resource".

BUG: 277769
BUG: 265586

M  +16   -0    akonadi/agentbase.cpp
M  +2    -0    akonadi/agentbase_p.h

http://commits.kde.org/kdepimlibs/3d91e285f6d876fc4515f256a0ba06d41f92fad5
Comment 2 András Manţia 2011-09-24 07:50:22 UTC
Git commit 72e8fa174031eb72aa82d984ae743882ba6f04b4 by Andras Mantia.
Committed on 24/09/2011 at 09:41.
Pushed by amantia into branch 'KDE/4.7'.

Set a program name to show a nicer name in the kwallet dialog, not just "Akonadi Resource".

BUG: 277769
BUG: 265586

Conflicts:

	akonadi/agentbase.cpp

M  +17   -1    akonadi/agentbase.cpp
M  +2    -0    akonadi/agentbase_p.h

http://commits.kde.org/kdepimlibs/72e8fa174031eb72aa82d984ae743882ba6f04b4