Set a program name to show a nicer name in the kwallet dialog, not just "Akonadi Resource".

BUG: 277769
BUG: 265586